add changes after code review feedback part one